--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
 
       - run: brew test-bot --only-tap-syntax
 
-      - run: brew test-bot --only-formulae --root-url='https://ghcr.io/v2/senz/tap'
+      - run: brew test-bot --only-formulae --root-url='https://ghcr.io/v2/senz/homebrew-tap'
         if: github.event_name == 'pull_request'
 
       - name: Upload bottles as artifact
